tests/golden/infer/success/row_polymorphic_let.ziku
let getX : forall a r. { x : a | r } -> a = \r => r.x in
let point = { x = 1, y = 2 } in
let point3d = { x = 10, y = 20, z = 30 } in
getX point + getX point3d
